--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
         <title>Lado a Lado</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel=icon href="https://fav.farm/🤝"/>
+        <link rel=icon href="/img/favicon.png"/>
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
