--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Viver para Amar - Lado a Lado</title>
+        <title>Feitos para Amar - Lado a Lado</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel=icon href="/img/favicon.png"/>
