--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,13 @@
         <link rel=icon href="/img/favicon.png"/>
         %sveltekit.head%
     </head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RR3N6CW5T9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      window.gtag = function(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-RR3N6CW5T9');
+    </script>
     <body data-sveltekit-preload-data="hover">
         <div style="display: contents">%sveltekit.body%</div>
     </body>
