--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,8 @@
         <link rel=icon href="/img/favicon.png"/>
         %sveltekit.head%
     </head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RR3N6CW5T9"></script>
-    <script>
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-RR3N6CW5T9"></script>
+    <script type="text/partytown">
       window.dataLayer = window.dataLayer || [];
       window.gtag = function(){dataLayer.push(arguments);}
       gtag('js', new Date());
